# DL4AGX

./: .gitignore
AV-Solutions/vad-trt/: README.md
AV-Solutions/vad-trt/export_eval/: export_no_prev.py  export_prev.py  test_cvt_acc.py  test_tensorrt.py
AV-Solutions/vad-trt/export_eval/bev_deploy/patch/bevformer/: ms_deform_attn.py
AV-Solutions/vad-trt/export_eval/patch/: patch_head.py
AV-Solutions/vad-trt/plugins/: CMakeLists.txt
